--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>Document</title>
+    <title>GENTLE MONSTER</title>
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/common.css">
 </head>
 <body>
-    
+    <header>
+        <h1><a href="./index.html"><img src="./images/logo.png" alt="GENTLE MONSTER"></a></h1>
+        <div class="h_right">
+            <a href="#" class="lang">Shop in KR</a>
+            <form action="#" method="get" id="search_frm">
+                <fieldset>
+                    <legend class="skip">검색양식</legend>
+                    <input type="search" name="search" id="search" placeholder="상품명을 입력해주세요">
+                    <button type="submit" id="searchBtn"><img src="./images/ico_search.png" alt="검색버튼"></button>
+                </fieldset>
+            </form>
+            <a href="#" id="login"><img src="./images/ico_login.png" alt="로그인"></a>
+            <a href="#" id="cart"><img src="./images/ico_cart.png" alt="장바구니"></a>
+            <a href="#" id="'nav"><img src="./images/ico_menu.png" alt="메뉴"></a>
+        </div>
+        
+    </header>
 </body>
 </html>
