--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
             </form>
             <a href="#" id="login"><img src="./images/ico_login.png" alt="로그인"></a>
             <a href="#" id="cart"><img src="./images/ico_cart.png" alt="장바구니"></a>
-            <a href="#" id="'nav"><img src="./images/ico_menu.png" alt="메뉴"></a>
+            <a href="#" id="nav"><img src="./images/ico_menu.png" alt="메뉴"></a>
         </div>
         <!-- nav 클릭시 open nav -->
         <div id="open_nav">
+            <!-- 닫기 버튼 -->
+            <button type="button" id="nav_close" alt="닫기"><span></span></button>
             <!-- 광고 슬라이드 -->
             <div class="swiper" id="nav_adver">
                 <div class="swiper-wrapper">
@@ -50,10 +52,6 @@
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
             </div> <!-- end swiper adver -->
-            <!-- 닫기 버튼 -->
-            <button type="button" id="nav_close">
-                <img src="./images/nav_close.png" alt="닫기">
-            </button>
             <!-- 내비게이션 -->
             <nav>
                 <a href="#">선글라스</a>
@@ -66,5 +64,6 @@
             </nav>
         </div>
     </header>
+    <script src="./script/common.js"></script>
 </body>
 </html>
