--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/common.css">
+    <link rel="stylesheet" href="./styles/responsive.css">
 </head>
 <body>
     <header>
@@ -64,6 +65,32 @@
             </nav>
         </div>
     </header>
+    <main>
+        <!-- main 1. visual -->
+        <div class="visual">
+            <div class="text">
+                <p>데이제르와 함께한 협업 컬렉션을 만나보세요</p>
+                <h1>GENTLE MONSTER D`HEYGERE</h1>
+                <div class="link">
+                    <a href="#">컬렉션 보러가기</a>
+                    <a href="#">자세히 보기</a>
+                </div>
+            </div>
+            <video src="./video/visual.mp4" autoplay loop muted></video>
+        </div>
+        <!-- main 2. bnr -->
+        <div class="adver_bnr">
+            <!-- background image -->
+            <div class="txt">
+                <p>볼드 컬렉션 2차 드롭을 만나보세요</p>
+                <h2>BOLD COLLECTION</h2>
+                <div class="link">
+                    <a href="#">구매하기</a>
+                    <a href="#">자세히 보기</a>
+                </div>
+            </div>
+        </div>
+    </main>
     <script src="./script/common.js"></script>
 </body>
 </html>
