젠틀몬스터0809

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- nav 클릭시 open nav -->
         <div id="open_nav">
             <!-- 닫기 버튼 -->
-            <button type="button" id="nav_close"></button>
+            <button type="button" id="nav_close">닫기</button>
             <!-- 광고 슬라이드 -->
             <div class="swiper" id="nav_adver">
                 <div class="swiper-wrapper">
