--- a/login.html
+++ b/login.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN | GENTLE MONSTER</title>
+    <!-- swiper -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <!-- favicon,style -->
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/login.css">
 </head>
 <body>
     <!-- header -->
+    <?php include('./header.php') ?>
     <main>
         <div class="login">
-            <h1><a href="./index.html"><img src="./images/logo.png" alt=""></a></h1>
+            <h1>LOGIN</h1>
             <div class="tab_title">
                 <a href="#" class="active">회원</a>
                 <a href="#">비회원</a>
@@ -53,18 +60,18 @@
                                 <p><input type="text" name="name" id="name" placeholder="주문자명"></p>
                             </div>
                             <div class="radio"> 
-                                <label for="email" class="active">
+                                <label for="email_order" class="active">
                                     <input type="radio" checked name="email_order" value="email" id="email_order">
                                     <span>이메일</span>
                                 </label>
-                                <label for="phone">
+                                <label for="phone_order">
                                     <input type="radio" name="phone_order" value="phone" id="phone_order">
                                     <span>핸드폰 번호</span>
                                 </label>
                             </div>
                             <div class="order_contents">
                                 <div class="email_wrap">
-                                    <input type="text" name="num" id="num" placeholder="주문번호">
+                                    <input type="text" name="num" class="num" placeholder="주문번호">
                                     <div class="email_input">
                                         <input type="email" name="email" id="email" placeholder="email">
                                         <span>@</span>
@@ -77,7 +84,7 @@
                                     </div>
                                 </div>
                                 <div class="phone_num">
-                                    <input type="text" name="num" id="num" placeholder="주문번호">
+                                    <input type="text" name="num" class="num" placeholder="주문번호">
                                     <div class="user_num">
                                         <select name="phone_select" id="phone_select">
                                             <option value="">통신사</option>
@@ -103,6 +110,9 @@
         </div>
     </main>
     <!-- footer -->
+    <?php include('./footer.php') ?>
     <script src="./script/login.js"></script>
+    <!-- header,footer 웹페이지 공통역역 적용 JS -->
+    <script src="./script/common.js"></script>
 </body>
 </html>
