젠틀몬스터 JS

--- a/product_list.html
+++ b/product_list.html
@@ -6,15 +6,62 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <title>안경 | GENTLE MONSTER</title>
+    <!-- swiper -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <!-- favicon,style -->
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/product.css">
 </head>
 <body>
     <!-- header.php -->
+    <?php include('./header.php') ?>
     <main>
         <!-- 1. swiper-slide -->
-
+        <div class="swiper" id="product_slide">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide slide1">
+                    <dl class="slide_txt">
+                        <dt><em>캐쥬얼&댄디한</em><br><span>분위기 연출</span></dt>
+                        <dd>GENTLE MONSTER</dd>
+                    </dl>
+                </div>
+                <div class="swiper-slide slide2">
+                    <dl class="slide_txt">
+                        <dt><em>캐쥬얼&댄디한</em><br><span>분위기 연출</span></dt>
+                        <dd>GENTLE MONSTER</dd>
+                    </dl>
+                </div>
+                <div class="swiper-slide slide3">
+                    <dl class="slide_txt">
+                        <dt><em>캐쥬얼&댄디한</em><br><span>분위기 연출</span></dt>
+                        <dd>GENTLE MONSTER</dd>
+                    </dl>
+                </div>
+                <div class="swiper-slide slide4">
+                    <dl class="slide_txt">
+                        <dt><em>캐쥬얼&댄디한</em><br><span>분위기 연출</span></dt>
+                        <dd>GENTLE MONSTER</dd>
+                    </dl>
+                </div>
+                <div class="swiper-slide slide5">
+                    <dl class="slide_txt">
+                        <dt><em>캐쥬얼&댄디한</em><br><span>분위기 연출</span></dt>
+                        <dd>GENTLE MONSTER</dd>
+                    </dl>
+                </div>
+                <div class="swiper-slide slide6">
+                    <dl class="slide_txt">
+                        <dt><em>캐쥬얼&댄디한</em><br><span>분위기 연출</span></dt>
+                        <dd>GENTLE MONSTER</dd>
+                    </dl>
+                </div>
+            </div><!-- e:swiper-wrapper -->
+            <div class="swiper-scrollbar"></div>
+        </div>
         <!-- 2. category -->
         <div id="category">
             <a href="#">
@@ -86,10 +133,10 @@
                         <p class="price">260,000원</p>
                         <p class="color">
                             <span>black</span>
-                            <span>gray</span>
+                            <span>lightgray</span>
                             <span>white</span>
-                            <span>darkred</span>
-                            <span>navy</span>
+                            <span>pink</span>
+                            <span>lightblue</span>
                         </p>
                     </div>
                 </div>
@@ -104,16 +151,16 @@
                         <p class="price">260,000원</p>
                         <p class="color">
                             <span>black</span>
-                            <span>gray</span>
+                            <span>lightgray</span>
                             <span>white</span>
-                            <span>burgundy</span>
-                            <span>navy</span>
+                            <span>pink</span>
+                            <span>lightblue</span>
                         </p>
                     </div>
                 </div>
                 <div class="item item3">
                     <div class="box">
-                        <a href="#" class="item_img"><img src="./images/glasses_img/glasses_08.jpg" alt=""></a>
+                        <a href="#" class="item_img"><img src="./images/glasses_img/glasses_10.jpg" alt=""></a>
                         <a href="" class="like_img"><img src="./images/favorite.png" alt="관심상품등록"></a>
                     </div>
                     <div class="txt">
@@ -122,16 +169,16 @@
                         <p class="price">260,000원</p>
                         <p class="color">
                             <span>black</span>
-                            <span>gray</span>
+                            <span>lightgray</span>
                             <span>white</span>
-                            <span>burgundy</span>
-                            <span>navy</span>
+                            <span>pink</span>
+                            <span>lightblue</span>
                         </p>
                     </div>
                 </div>
                 <div class="item item4">
                     <div class="box">
-                        <a href="#" class="item_img"><img src="./images/glasses_img/glasses_08.jpg" alt=""></a>
+                        <a href="#" class="item_img"><img src="./images/glasses_img/glasses_11.jpg" alt=""></a>
                         <a href="" class="like_img"><img src="./images/favorite.png" alt="관심상품등록"></a>
                     </div>
                     <div class="txt">
@@ -140,16 +187,16 @@
                         <p class="price">260,000원</p>
                         <p class="color">
                             <span>black</span>
-                            <span>gray</span>
+                            <span>lightgray</span>
                             <span>white</span>
-                            <span>burgundy</span>
-                            <span>navy</span>
+                            <span>pink</span>
+                            <span>lightblue</span>
                         </p>
                     </div>
                 </div>
                 <div class="item item5">
                     <div class="box">
-                        <a href="#" class="item_img"><img src="./images/glasses_img/glasses_08.jpg" alt=""></a>
+                        <a href="#" class="item_img"><img src="./images/glasses_img/glasses_01.jpg" alt=""></a>
                         <a href="" class="like_img"><img src="./images/favorite.png" alt="관심상품등록"></a>
                     </div>
                     <div class="txt">
@@ -158,10 +205,10 @@
                         <p class="price">260,000원</p>
                         <p class="color">
                             <span>black</span>
-                            <span>gray</span>
+                            <span>lightgray</span>
                             <span>white</span>
-                            <span>burgundy</span>
-                            <span>navy</span>
+                            <span>pink</span>
+                            <span>lightblue</span>
                         </p>
                     </div>
                 </div>
@@ -169,5 +216,45 @@
         </div>
     </main>
     <!-- footer.php -->
+    <!-- <?php include('./footer.php') ?> -->
+    <script>
+        // 특정 페이지에만 해당하는 JS 동작기능은 내부스크립트로 작성해도 된다.
+        // product_slide 기능은 product_list.html에만 존재한다.(내부)
+        // header swiper 기능은 header가 모든 페이지에 존재하기 때문에 외부에 작성해야 한다.
+        const product_slide = new Swiper('#product_slide',{
+            slidesPerView:1, // 한번에 보이는 슬라이드 개수
+            centeredSlides:true, // 슬라이드 기준이 중심부터 시작설정
+            loop:true, // 무한 반복 설정
+            autoplay:{delay:2000}, // 자동재생
+            speed:800, // 전환되는 속도 설정
+            scrollbar:{el:'#product_slide .swiper-scrollbar'}, // 스크롤바 표시
+            on:{
+                init:function(){
+                    // 슬라이드가 변경되기 전 초기 실행함수
+                    // this = #product_slide
+                    // this.slides = .swiper-slide
+                    // this.activeIndex = 현재 활성화된 slide
+                    this.slides[this.activeIndex].querySelector('.slide_txt').style.opacity = '1';
+                    // this.slides[this.activeIndex].style.background = 'aqua';
+                },
+                slideChange:function(){
+                    // 슬라이드 변경될 때 인식되는 실행함수
+                    // 1. 활성화(가운데) 전 모든 슬라이드 opacity:0
+                    this.slides.forEach(target => {
+                        target.querySelector('.slide_txt').style.opacity = '0';
+                        target.querySelector('.slide_txt').style.transform = 'translateX(40%)';
+                    })
+                    // 2. 활성화(가운데) 슬라이드 opacity:1
+                    this.slides[this.activeIndex].querySelector('.slide_txt').style.opacity = '1';
+                    this.slides[this.activeIndex].querySelector('.slide_txt').style.transform = 'translateX(0)';
+                }
+            },
+            breakpoints:{
+                700:{slidesPerView:2, centeredSlides:false,},
+                1000:{slidesPerView:3, centeredSlides:true,},
+            },
+        })
+    </script>
+    <script src="./script/common.js"></script>
 </body>
 </html>
