--- a/product_list.html
+++ b/product_list.html
@@ -216,6 +216,7 @@
         </div>
     </main>
     <!-- footer.php -->
+    <?php include('./footer.php') ?>
     <!-- <?php include('./footer.php') ?> -->
     <script>
         // 특정 페이지에만 해당하는 JS 동작기능은 내부스크립트로 작성해도 된다.
