--- a/map.html
+++ b/map.html
@@ -19,6 +19,7 @@
     <!-- header -->
     <?php include('./header.php') ?>
     <main>
+        <h1>매장보기</h1>
         <div id="map"><!--지도삽입위치--></div>
         <div class="txt">
             <p>젠틀몬스터 스타필드 하남</p>
